Use snake case for property names
